# exp_cov

./: .gitignore  Dockerfile  README.md  launch.sh  spawnContainers.py
src/drive_py/: CMakeLists.txt  package.xml
src/drive_py/launch/: drive_py.launch  exploration.launch
src/drive_py/scripts/: turtlebot3_drive.py
src/exp_cov/: CMakeLists.txt  package.xml
src/exp_cov/config/: rviz_coverage.rviz  rviz_double.rviz  rviz_nice_vis.rviz  rviz_slam.rviz  rviz_slam_camera.rviz  xbox.config.yaml
src/exp_cov/launch/: esplora.launch  esplora_2.launch  esplora_gazebo.launch  esplora_slam_toolbox.launch  explore_lite2.launch  gazebo_init.launch  naviga.launch  robot_bringup.launch  robot_camera_remote.launch  robot_explore_lite.launch  robot_joystick.launch  robot_naviga.launch  robot_nice_vis_slam.launch  robot_remote.launch  robot_slam.launch  robot_slam_double.launch  robot_slam_raw.launch  room_exploration_client.launch  slam_toolbox.launch  slam_toolbox_no_rviz.launch  stage_init.launch  stage_init_select.launch  start_stage_random_map.launch  waypoint_slam.launch
src/exp_cov/maps/: da_coverage.yaml  lab_completo_manuale_raw.yaml  lab_completo_manuale_raw_cut.pgm  lab_completo_manuale_raw_cut.yaml  map.pgm  map.yaml  map_simple_maze.yaml  stanza.yaml
src/exp_cov/maps/map1_run2/: rectangles.json
src/exp_cov/maps/map1_run4/: map1_rgb_randomized_exploration.pgm
src/exp_cov/maps/map1_run5/: map1_rgb_randomized_exploration.pgm
src/exp_cov/maps/map1_run6/: map1_rgb_randomized_exploration.pgm  map1_rgb_randomized_exploration.yaml
src/exp_cov/maps_rgb_lab/map2/: pose2.txt
src/exp_cov/maps_rgb_lab/map3/: pose3.txt
src/exp_cov/maps_rgb_lab/map5/: pose5.txt
src/exp_cov/optimization/: comandi.txt  coverage.mod  coverage_linear.mod  coverage_linear_relaxed.mod  coverage_spanning_tree.mod
src/exp_cov/optimization/test1/: ampl_out.txt  show_guards.py
src/exp_cov/optimization/test11/: ampl_out.txt  guardie_scelte.txt  show_chosen_guards.py
src/exp_cov/optimization/test12/: ampl_out.txt  guardie_scelte.txt  show_chosen_guards.py
src/exp_cov/optimization/test4/: ampl_out.txt  guardie_scelte.txt  show_chosen_guards.py  tsp_positions.txt
src/exp_cov/optimization/test5/: coverage_linear.mod
src/exp_cov/optimization/test7/: ampl_out.txt  guardie_scelte.txt  show_chosen_guards.py
src/exp_cov/optimization/test8/: ampl_out.txt  guardie_scelte.txt  show_chosen_guards.py
src/exp_cov/param/: amcl_params.yaml  explore_lite_params.yaml  gmapping_params_lds2.yaml  move_base_params_gazebo.yaml
src/exp_cov/scripts/: borderify.py  distance_check.py  lidar_maxrange_filter.py  map_rgb_simul.py  map_to_floorplan_size.py  modify_and_run.py  opt_viz.py  optimization_data.py  pad.py  run_explore_and_waypoint.py  run_explore_lite_to_stop.py  run_waypoint_navigation.py  show_chosen_guards.py  show_guard_candidates.py  show_guards.py  test.py  tsp.py
src/exp_cov/scripts/pad/: big.yaml  small.yaml
src/exp_cov/tesi/binarization/: ampl_out.txt  distanze.py  guardie_scelte.txt  show_chosen_guards.py  tsp.py
src/exp_cov/tesi/testing1/run0/: Map_coverage.yaml
src/exp_cov/tesi/testing1/run1/: Map_coverage.yaml
src/exp_cov/tesi/testing1/run2/: Map_coverage.yaml  Map_exploration.yaml
src/exp_cov/tesi/testing1/run5/: Map_exploration.yaml
src/exp_cov/tesi/testing1/run7/: Map_coverage.yaml
src/exp_cov/tesi/testing1/run9/: Map_coverage.yaml
src/exp_cov/tesi/testing10/bitmaps/: rectangles0.json
src/exp_cov/tesi/testing10/run0/: Map_coverage.yaml  Map_exploration.yaml
src/exp_cov/tesi/testing10/run2/: Map_exploration.yaml
src/exp_cov/tesi/testing10/run4/: Map_exploration.yaml
src/exp_cov/tesi/testing10/run5/: Map_coverage.yaml
src/exp_cov/tesi/testing10/run8/: Map_exploration.yaml
src/exp_cov/tesi/testing10/run9/: Map_exploration.yaml
src/exp_cov/tesi/testing2/: output.txt  plot.py
src/exp_cov/tesi/testing2/run10/: Map_exploration.yaml
src/exp_cov/tesi/testing2/run2/: Map_coverage.yaml  Map_exploration.yaml
src/exp_cov/tesi/testing2/run4/: Map_coverage.yaml
src/exp_cov/tesi/testing2/run5/: Map_coverage.yaml  Map_exploration.yaml
src/exp_cov/tesi/testing2/run6/: Map_exploration.yaml
src/exp_cov/tesi/testing2/run8/: Map_coverage.yaml  Map_exploration.yaml
src/exp_cov/tesi/testing3/: output.txt
src/exp_cov/tesi/testing4/: output.txt
src/exp_cov/tesi/testing5/: output.txt
src/exp_cov/tesi/testing9/: output.txt
src/exp_cov/tesi_testing2/: poses.txt  result.py  run_tests.py
src/exp_cov/tesi_testing2/tesst16/: output.txt  world0.world
src/exp_cov/tesi_testing2/testing6/: output.txt
src/exp_cov/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro  turtlebot3_burger_camera.urdf.xacro
src/exp_cov/world/: map_rgb_1.world
src/ministepback_recovery/: CMakeLists.txt  ministepback_plugin.xml  package.xml
src/ministepback_recovery/include/ministepback_recovery/: ministepback_recovery.h
src/ministepback_recovery/src/: ministepback_recovery.cpp
src/rotate_left_recovery/: CMakeLists.txt  package.xml  rotate_left_recovery.xml
src/rotate_left_recovery/include/rotate_left_recovery/: rotate_left_recovery.h
src/rotate_left_recovery/src/: rotate_left_recovery.cpp
(+860 files in other folders)
