<?xml version="1.0"?>
<package format="2">
  <name>drive_py</name>
  <version>0.0.0</version>
  <description>The drive_py package</description>

  <maintainer email="davide.bertalero@studenti.unimi.it">d-ber</maintainer>

  <license>CC BY-NC</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

</package>
