<?xml version="1.0"?>
<package format="2">
  <name>exp_cov</name>
  <version>1.0.0</version>
  <description>This package provides utilities for map manipulation and coverage.</description>

  <author>Davide Bertalero</author>

  <license>CC BY-NC-SA 4.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!--  TODO: update dependecies -->

</package>
