<?xml version="1.0"?>
<package format="2">
  <name>exp_cov</name>
  <version>1.0.0</version>
  <description>This package provides utilities for map manipulation and coverage.</description>

  <author>Davide Bertalero</author>
  <maintainer email="todo@todo.todo">TODO</maintainer>

  <license>CC BY-NC-SA 4.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!--  TODO: update dependencies -->

</package>
